--- a/index.html
+++ b/index.html
@@ -4,52 +4,62 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="reset.css">    
         <title>Sara Mohamoud</title>
     </head>
     <body>
         <header>
             <!-- S A R A in colourful letters -->
-            <h1> Sara Mohamoud </h1>
-            <nav> 
+            <div id="logo"> 
+                <span style=color:#DB939A;> S </span>
+                <span style=color:#E6C983;> A </span>
+                <span style=color:#7A9950;> R </span>
+                <span style=color:#B0988C;> A </span>
+            </div>  
+            <nav class="navbar"> 
                 <ul> 
-                    <li> <a href=#contact-info> Contact </a> </li>
-                    <li> <a href=#about-me> About Me </a> </li>
-                    <li> <a href=#git-hub> My Work </a> </li>
+                    <li> <a href=#contact-info class="nav-link"> Contact </a> </li>
+                    <li> <a href=#about-me class="nav-link"> About Me </a> </li>
+                    <li> <a href=#git-hub class="nav-link"> My Work </a> </li>
                 </ul>
             </nav>
         </header>
+            <br>
+            <article>
+            <h1> Sara Mohamoud </h1>
+            <img src="https://ca.slack-edge.com/T6L933W4X-U01SJ4L8LRH-g152024eb9aa-512" alt=Sara Mphamoud id="sara"> <!-- ask sara how she would describe herself to a blind person -->
 
-            <img src="" alt=Sara Mphamoud> <!-- ask sara how she would describe herself to a blind person -->
             <div id="contact-info"> 
                 
-                <h2>Contact Information</h2> <!-- ask sara what contact info she want to include -->
-                
+                <h3>Contact Information</h3> <!-- ask sara what contact info she want to include -->
+
             </div>
             <div id="about-me"> 
-                <h2>About Me </h2>
+                <h3>About Me </h3>
                     <p> I am Sara, your fellow bootcamper from Birmingham. Like most of you I have joined this incredible bootcamp to gain technical skills and break into the fascinating world of tech! </p>
 
-                    <p> I studied English at university as I was a bit of a book-worm and loved all things literature and analysing. I initially wanted to be a teacher but did a complete turn and decided tech is where I wanted to be!. I have worked as a tutor and business administrator. </p>
+                    <p> I studied English at university as I was a bit of a book-worm and loved all things literature and analysing. I initially wanted to be a teacher but did a complete turn and decided tech is where I wanted to be! I have worked as a tutor and business administrator. </p>
 
                     <p> I am a mother of two and enjoy travelling and creating memories with my children. I have lived in a few countries like Denmark and Qatar and love exploring new cultures. If am not spending time with my kids, I enjoy going on walks and reading. I am a big fan of photography, although I am pretty useless at taking good photos I like to admire the great moments captured by others. </p>                </p>
                 <!--embed interview video, shorten if she would prefer to not include everything-->
                 </div>
 
             <div id="git-hub"> 
-                <h2>Examples of work</h2>
+                <h3>Examples of work</h3>
                     <!--embed scratch game-->
                     <img src="" alt="">  <!-- insert pictures and descriptions of work here including avatar, make photo link to external websites -->
                     <p> More examples of my work can be found <a href="link to git hub">on Github</a> </p>
 
             <div id="future-plan"> 
-                <h2>What do I hope to achieve</h2>
+                <h3>What do I hope to achieve</h3>
                     <p> Info about future plans <!-- Ask Sara what she wants to do in the future --> </p>
 
             <div id="testimonial"> 
-                <h2>Testimonial</h2>
-                    <blockquote> <em>"Sara has helped me so much with our first project. She is hardworking, quick to pick things up and tenacious with any problems we have had. She will be an asset to anyone who is luck enough to be paired with her" </em>- <a href="" target=_blank>Becki Floyd</a><a> </blockquote> <!-- Link to Saras Website-->
+                <h3>Testimonial</h3>
+                    <blockquote> <em>"Sara has helped me so much with our first project. She is hardworking, quick to pick things up and tenacious with any problems we have had. <br> <br> She will be an asset to anyone who is lucky enough to be paired with her" </em>- <a href="" target=_blank>Becki Floyd</a><a> </blockquote> <!-- Link to Saras Website-->
             </div>
-
+            </article>
             <footer> <!-- links to social media -->
             </footer>
 
