--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
         <title>Forms</title>
     </head>
     <body>
-        <form action="results.html" method="GET" enctype="multipart/form-data" netlify> 
+        <form name="Form" method="POST" data-netlify="true">
             <div> 
                 <label for="username">Username</label>
                 <input type="text" name="username" id="username" value="value sets a default name in box">
