removed scratch fix as didnt work with full screen

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
                 <div id="git-hub">
                     <h3 tabindex="0">Examples of work</h3>
 
-                    <iframe id="scratch" src="https://scratch.mit.edu/projects/452715548/embed" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen alt= "Scratch game - The shark follows the mouse pointer to score points by eating fish" ></iframe>
-
-                    <!-- DevTools failed to load SourceMap: Could not load content for https://scratch.mit.edu/31b932aa68d4f678cc23.worker.js.map: Fetch through target failed: Target not supported; Fallback: HTTP error: status code 404, net::ERR_HTTP_RESPONSE_CODE_FAILURE-->
+                    <iframe src="https://scratch.mit.edu/projects/452715548/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                    
                     <img id="avatar" src="https://i.imgur.com/VdxLxL3.png" alt="Saras avatar">
 
                     <p> More examples of my work can be found on <a href="link to git hub">Github</a> </p>
