fixed logo with media query

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <header>
 
             <div id="logo">
-                <span style=color:#DB939A;> S </span>
-                <span style=color:#E6C983;> A </span>
-                <span style=color:#6C8647;> R </span>
-                <span style=color:#B0988C;> A </span>
+                <span style=color:#DB939A; class="letter"> S </span>
+                <span style=color:#E6C983; class="letter"> A </span>
+                <span style=color:#6C8647; class="letter"> R </span>
+                <span style=color:#B0988C; class="letter"> A </span>
             </div>
 
             <nav class="navbar">
@@ -52,7 +52,7 @@
                     <h3 tabindex="0">Examples of work</h3>
 
                     <iframe src="https://scratch.mit.edu/projects/452715548/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-                    
+
                     <img id="avatar" src="https://i.imgur.com/VdxLxL3.png" alt="Saras avatar">
 
                     <p> More examples of my work can be found on <a href="link to git hub">Github</a> </p>
