add media queries for headings

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <img src="https://i.imgur.com/ckyod2g.jpg" alt="Sara Mohamoud" id="sara">
 
                 <div id="about-me">
-                    <h1> Sara Mohamoud </h1>
+                    <h1 class="heading"> Sara Mohamoud </h1>
 
-                    <h2 tabindex="0">About Me </h2>
+                    <h2 tabindex="0" class="heading">About Me </h2>
 
                     <p> I am Sara, your fellow bootcamper from Birmingham. Like most of you I have joined this incredible bootcamp to gain technical skills and break into the fascinating world of tech! </p>
 
@@ -49,7 +49,7 @@
 
 
                 <div id="git-hub">
-                    <h3 tabindex="0">Examples of work</h3>
+                    <h3 tabindex="0" class="heading">Examples of work</h3>
 
                     <iframe src="https://scratch.mit.edu/projects/452715548/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 
@@ -61,19 +61,19 @@
                 <div class="pink"> </div>
 
                 <div id="future-plan">
-                    <h3 tabindex="0">What do I hope to achieve</h3>
+                    <h3 tabindex="0" class="heading">What do I hope to achieve</h3>
 
                     <p> I am excited to see where this incredible learning journey takes me. I hope it will help open doors to the tech industry and kickstart a career in tech. Some of the tech roles I am interested include web development and business analysis. </p>
                 </div>
 
                 <div id="testimonial">
-                    <h3 tabindex="0">Testimonial</h3>
+                    <h3 tabindex="0" class="heading">Testimonial</h3>
 
                     <blockquote> <em>"Sara has helped me so much with our first project. She is hardworking, quick to pick things up and tenacious with any problems we have had. <br> <br> She will be an asset to anyone who is lucky enough to be paired with her" </em>- <a href="https://twitter.com/boredinbrum" target=_blank>Becki Floyd</a><a> </blockquote> <!-- Link to Saras Website-->
                 </div>
 
                 <div id="contact">
-                    <h4 tabindex="0"> Get in touch </h4>
+                    <h4 tabindex="0" class="heading"> Get in touch </h4>
 
                      <a href="mailto:sara_mohamoud@outlook.com" class="contact-link"> Email </a>
 
