put back in the dynamic sizing of scratch but added a max width

--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
                 <div id="git-hub">
                     <h3 tabindex="0" class="heading">Examples of work</h3>
 
-                    <iframe src="https://scratch.mit.edu/projects/452715548/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                    <iframe id="scratch" src="https://scratch.mit.edu/projects/452715548/embed" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
 
-                    <img id="avatar" src="https://i.imgur.com/VdxLxL3.png" alt="Saras avatar">
+                    <div>
+                      <img id="avatar" src="https://i.imgur.com/VdxLxL3.png" alt="Saras avatar">
+                    </div>
 
                     <p> More examples of my work can be found on <a href="link to git hub">Github</a> </p>
                 </div>
