contact section finished

--- a/index.html
+++ b/index.html
@@ -73,13 +73,17 @@
                 </div>
 
                 <div id="contact">
-                    <h4 tabindex="0" class="heading"> Get in touch </h4>
+                    <h4 tabindex="0" class=""> Get in touch </h4>
+
+                    <id="flex-cont">
 
                      <a href="mailto:sara_mohamoud@outlook.com" class="contact-link"> Email </a>
 
                      <a href="https://github.com/Sara-Mo93/" class="contact-link" target=_blank> Git Hub </a>
 
-                     <a href="https://www.linkedin.com/in/sara-mohamoud-097101b0" class="contact-link" target=_blank> Hire Me </a> </p>
+                     <a href="https://www.linkedin.com/in/sara-mohamoud-097101b0" class="contact-link" id="item-con3" target=_blank> Hire Me </a> </p>
+               
+                    </div>
                 </div>
 
             </article>
