--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <img src="https://i.imgur.com/ckyod2g.jpg" alt="Sara Mohamoud" id="sara">
 
                 <div id="about-me">
-                    <h1 class="heading"> Sara Mohamoud </h1>
+                    <h1 class=""> Sara Mohamoud </h1>
 
                     <h2 tabindex="0" class="heading">About Me </h2>
 
