Work examples now in line, max height applied to photo

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 
                     <iframe id="scratch" src="https://scratch.mit.edu/projects/452715548/embed" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
 
-                    <div>
+                    <!-- <div> -->
                       <img id="avatar" src="https://i.imgur.com/VdxLxL3.png" alt="Saras avatar">
-                    </div>
+                    <!-- </div> -->
 
                 <p> More examples of my work can be found on <a href="link to git hub">Github</a> </p>
             
