removed unnecessary div

--- a/index.html
+++ b/index.html
@@ -44,32 +44,24 @@
 
             <img src="https://i.imgur.com/ckyod2g.jpg" alt="Sara Mohamoud" id="sara">
 
-            <div id="about-me">
+            <h1> Sara Mohamoud </h1>
 
-                <h1 class=""> Sara Mohamoud </h1>
+            <h2 tabindex="0" class="heading">About Me </h2>
 
-                <h2 tabindex="0" class="heading">About Me </h2>
+            <p> I am Sara, your fellow bootcamper from Birmingham. Like most of you I have joined this incredible bootcamp to gain technical skills and break into the fascinating world of tech! </p>
 
-                <p> I am Sara, your fellow bootcamper from Birmingham. Like most of you I have joined this incredible bootcamp to gain technical skills and break into the fascinating world of tech! </p>
+            <p> I studied English at university as I was a bit of a book-worm and loved all things literature and analysing. I initially wanted to be a teacher but did a complete turn and decided tech is where I wanted to be! I have worked as a tutor and business administrator. </p>
 
-                <p> I studied English at university as I was a bit of a book-worm and loved all things literature and analysing. I initially wanted to be a teacher but did a complete turn and decided tech is where I wanted to be! I have worked as a tutor and business administrator. </p>
-
-                <p> I am a mother of two and enjoy travelling and creating memories with my children. I have lived in a few countries like Denmark and Qatar and love exploring new cultures. If am not spending time with my kids, I enjoy going on walks and reading. I am a big fan of photography, although I am pretty useless at taking good photos I like to admire the great moments captured by others. </p>
-
-            </div>
-
+            <p> I am a mother of two and enjoy travelling and creating memories with my children. I have lived in a few countries like Denmark and Qatar and love exploring new cultures. If am not spending time with my kids, I enjoy going on walks and reading. I am a big fan of photography, although I am pretty useless at taking good photos I like to admire the great moments captured by others. </p>
 
             <div id="git-hub">
 
                 <h3 tabindex="0" class="heading">Examples of work</h3>
 
+                <iframe id="scratch" src="https://scratch.mit.edu/projects/452715548/embed" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
 
-                    <iframe id="scratch" src="https://scratch.mit.edu/projects/452715548/embed" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
-
-                    <!-- <div> -->
-                      <img id="avatar" src="https://i.imgur.com/VdxLxL3.png" alt="Saras avatar">
-                    <!-- </div> -->
-
+                <img id="avatar" src="https://i.imgur.com/VdxLxL3.png" alt="Saras avatar">
+                    
                 <p> More examples of my work can be found on <a href="link to git hub">Github</a> </p>
 
             </div>
