--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                 <ul>
                     <li> <a href=#logo class="nav-link"> Home </a> </li>
-                    <li> <a href=#git-hub class="nav-link"> My Work </a> </li>
+                    <li> <a href="#git-hub" class="nav-link"> My Work </a> </li>
                     <li> <a href=#contact class="nav-link"> Contact </a> </li>
                     <li class="social"> <a href="https://www.linkedin.com/in/sara-mohamoud-097101b0" target=_blank><i class="fab fa-linkedin"></i></a></li>
                     <li class="social"> <a href="https://github.com/Sara-Mo93/" target=_blank ><i class="fab fa-github" ></i></a></li>
